examples/test/testpolicy7226.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7226
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key47: value0
      key26: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value41
      podSelector:
        matchLabels:
          key49: value32
          key17: value3
